src/main/java/com/example/lyclebackend/error/ErrorCode/ErrorCode.java
package com.example.lyclebackend.error.ErrorCode;

import org.springframework.http.HttpStatus;

public interface ErrorCode {

    String name();

    HttpStatus getHttpStatus();

    String getMessage();

}